--- a/index.html
+++ b/index.html
@@ -1,25 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <title> Curriculum vitae </title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="./bs/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
-<body>
-  <section class="container">
-    <div class="row"> 
-      <div class="" id="presentacion">
+    <title>Datos personales</title>
+  </head>
+  <body class="bodyy">
 
+    
+  <section class="container" id="detalles">
+    <div class="row">
+      <div class="col-lg-6 md-12 mb-sm-0 pt-3" >
+        <div class="card">
+          <div class="card-body text-center">
+            <a href="#">
+              <h5 class="card-title text-center">Formación Académica.</h5>
+            </a>
+            <img src="./img/books.png" alt="" srcset="">
+          </div>
+        </div>
       </div>
-    </div> 
+      <div class="col-lg-6 md-12 mb-sm-0 pt-3">
+        <div class="card">
+          <div class="card-body text-center">
+            <a href="#">
+              <h5 class="card-title text-center">Experiencia
+                Laboral.</h5>
+            </a>
+            <img src="./img/male.png" alt="" srcset="">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 md-12 mb-sm-0 pt-3">
+        <div class="card">
+          <div class="card-body">
+            <a href="#">
+              <h5 class="card-title text-center">Habilidades y
+                Objetivos.</h5>
+            </a>
+            <img src="./img/people.webp" alt="" srcset="">
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 md-12 mb-sm-0 pt-3">
+        <div class="card">
+          <div class="card-body">
+            <a href="#">
+              <h5 class="card-title text-center">Datos
+                Personales.</h5>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>  
   </section>
 
-  <!--BS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
 
+    <!--bs-->
+    <script
+      src="./bs/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
